添加input的size、前置后置

--- a/src/input/input.scss
+++ b/src/input/input.scss
@@ -1,69 +1,109 @@
 //config
-@import "../styles/variables";
+@import '../styles/variables';
 //layout
-@import "../styles/reboot";
+@import '../styles/reboot';
 
 @mixin InputSize($padding-top-bootom) {
   padding-top: $padding-top-bootom;
   padding-bottom: $padding-top-bootom;
 }
 
-$border:#40a9ff;
-$box-shadow:#d1e9ff;
+$border: #40a9ff;
+$box-shadow: #d1e9ff;
 
+// .orange-space-item {
+//   box-sizing: border-box;
+//   margin: 0;
+//   padding: 0;
 
-.orange-space-item {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+//   &:hover {
+//     border: 1px solid $border;
+//   }
 
-  &:hover {
-    border: 1px solid $border;
-  }
-
-  &:focus {
-    box-shadow: $box-shadow;
-  }
-}
+//   &:focus {
+//     box-shadow: $box-shadow;
+//   }
+// }
 
 .orange-input {
-  box-sizing: border-box;
-  margin: 0;
-  outline: 0;
-  font-variant: tabular-nums;
-  list-style: none;
-  font-feature-settings: "tnum";
   position: relative;
   display: inline-block;
+  box-sizing: border-box;
   width: 100%;
   min-width: 0;
+  margin: 0;
   padding: 4px 11px;
   color: #000000d9;
   font-size: 14px;
+
+  font-variant: tabular-nums;
   line-height: 1.5715;
+  list-style: none;
   background-color: #fff;
   background-image: none;
   border: 1px solid #d9d9d9;
-  border-radius: 2px;
-  transition: all .3s;
+  border-radius: 6px;
+  outline: none;
+  transition: all 0.3s;
+  font-feature-settings: 'tnum';
 
   &:hover {
-    // box-shadow: $box-shadow;
-    border: none;
     border-color: #40a9ff;
+    border-radius: 6px;
   }
 
   &:focus {
-    box-shadow: 0 0 0 2px $box-shadow;
     border-right-width: 1px;
-  }
-
-  span {
-    padding: 4px 11px;
+    border-radius: 6px;
+    box-shadow: 0 0 0 2px $box-shadow;
   }
 }
 
+//size
+.orange-input-sm {
+  line-height: 16px;
+}
 
-.input-password {
+.orange-input-lg {
+  line-height: 34px;
+}
 
+//suffix  affix
+@mixin orangeIinputGroup() {
+  border: 1px solid #d9d9d9;
+}
+.orange-input-group-wrapper {
+  display: flex;
+  box-sizing: border-box;
+
+  .orange-input-wrapper-prepand {
+    @include orangeIinputGroup();
+    border-right: none;
+    border-top-left-radius: 6px;
+    border-bottom-left-radius: 6px;
+  }
+
+  .orange-input-wrapper-append {
+    @include orangeIinputGroup();
+    border-left: none;
+    border-top-right-radius: 6px;
+    border-bottom-right-radius: 6px;
+  }
+
+  .orange-input-group-addon{
+    padding: 0 5px;
+    color: rgba(0,0,0,.88);
+    background-color: #fafafa;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .orange-input-append {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+  }
+  .orange-input-prepand {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+  }
 }
