--- a/src/select/select.scss
+++ b/src/select/select.scss
@@ -54,13 +54,60 @@ $box-shadow: #d1e9ff;
   }
 }
 
+//disabled
+.orange-select-disabled {
+  background-color: #ededed;
+  cursor: not-allowed;
+  &:hover {
+    border-color: #d9d9d9;
+    border-radius: 6px;
+    box-shadow: none;
+  }
 
-//select列表 
-.orange-select-dropdown{
-    position: absolute; 
-    background: red;
-    padding: 4px;
-    margin: 0;
-    border-radius: 8px;
-    min-height: 55px;
+  .orange-select-disabled {
+    cursor: not-allowed;
+  }
+}
+
+//select列表
+.orange-select-dropdown {
+  position: absolute;
+  z-index: 999;
+  box-sizing: border-box;
+  min-height: 55px;
+  margin: 0;
+  padding: 4px;
+  color: rgba(0, 0, 0, 0.88);
+  font-size: 14px;
+  background: rgb(255, 255, 255);
+  border-radius: 8px;
+  box-shadow: 0 6px 16px 0 rgba(0, 0, 0, 0.08), 0 3px 6px -4px rgba(0, 0, 0, 0.12),
+    0 9px 28px 8px rgba(0, 0, 0, 0.05);
+  transition: all 2s;
+}
+
+.query-list {
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  // padding: 5px 12px;
+  font-size: 14px;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background 0.3s ease;
+}
+
+.query-item {
+  display: flex;
+  padding: 5px 12px;
+  &:hover {
+    background-color: rgba(0, 0, 0, 0.04);
+  }
+}
+
+.query-item-label {
+  flex: auto;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
